# vrekon

./: .gitignore  README.md  Todos.md  ausschluss_liste.txt  blacklist.txt  df-bugfix.xlsx  dvc.yaml  pyproject.toml  schreibmeister-bugfix.xlsx  ya.csv  ya.xlsx
.dvc/: config
.ipynb_checkpoints/: dvc-checkpoint.yaml
abzug/: .gitignore  .~lock.böm.csv#  .~lock.iv.csv#  II-mit-nachweis-test.xlsx  böink.csv  böink.xlsx  böm.csv  böm.xlsx  ii.csv  ii.xlsx  iii.csv  iii.xlsx  iv.csv  iv.xlsx  schreibmeister.csv  schreibmeister.xlsx
dat/: böf.csv  böink-filtered.csv  böink.csv  böm.csv  böm_filtered.csv  dublette_akz.csv  i.csv  ii.csv  iii-filtered.csv  iii.csv  iv-filtered.csv  klemmf.csv  v.csv  viii.csv
div_listen/: böink-verknuepfungen.csv  böm-verknuepfungen.csv  ii-verknuepfungen.csv  iii-verknuepfungen.csv  iv-abvz.csv.csv  iv-verknuepfungen.csv  schreibmeister-verknuepfungen.csv  verknuepfte-digitalisate.ipynb
filter/: .gitignore
notebooks/: II-mit-nachweis-test.xlsx  III-mit-nachweis-test.xlsx  Restaurierungsbedürftige_Bücher_Gesamt_für_Bettina.xlsx  Sarah-Eimer.txt  Spielwiese_Matchen_III_Drucke_1501-1560.xlsm  Spielwiese_Matchen_III_Drucke_1501-1560.xlsx  Thomschke_III_Drucke_1501-1560.xlsm  Thomschke_III_Drucke_1501-1560.xlsm:{1817910B-C48F-402e-97A7-35511415DB0D}  abzug.ipynb  abzug_neu.ipynb  angebundene.csv  be-listen.ipynb  df.csv  df.xlsx  gesamtanalyse.ipynb  ii-merge-test.xlsx  ii-neu-titel.csv  iii-merge-test-excel-kommentare.xlsx  iii-merge-test-excel.xlsx  iii-merge-test.xlsx  listen-migration.ipynb  pica-abzug.sh  pica-rs.md  playground.ipynb  (+10 more)
(+104 files in other folders)
