[tool.poetry]
name = "vrekon"
version = "0.1.0"
description = "Pipeline zur Generierung von Bestandslisten für das Projekt Virtuelle Rekonstruktion der DBSM Buchsammlungen"
authors = ["André Wendler <andre.wendler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
mitosheet = "^0.1.435"
dvc = "^2.13.0"
natsort = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
